--- a/ResumePage/resume-styles.css
+++ b/ResumePage/resume-styles.css
@@ -1,4 +1,4 @@
- body {
+body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #f4f4f4;
@@ -38,6 +38,7 @@ section {
     margin-bottom: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    border: 3px solid #000000; /* Add a black border */
 }
 
 section:nth-child(even) {
@@ -51,4 +52,48 @@ h2 {
 footer {
     text-align: center;
     margin-top: 30px;
+}
+.skills-container {
+    display: flex;
+}
+
+.skills-list {
+    list-style-type: disc;
+    padding: 0;
+    margin-right: 30px; /* Add some spacing between the two lists */
+}
+.content-wrapper {
+    width: calc(100% - 500px); /* Adjust this value as needed to change the width of the sections */
+    float: left;
+}
+
+aside {
+    width: 500px; /* Adjust this value as needed to change the width of the image */
+    position: fixed;
+    top: 0;
+    right: 1px; /* Adjust this value to change the distance from the right side */
+    height: 100%;
+    overflow: hidden;
+    z-index: -1; /* Place the image behind the content */
+}
+
+
+aside img {
+    height: 100%;
+    object-fit: cover;
+    border: 2px solid black; /* Add a black border */
+    border-radius: 10px; /* Add rounded corners */
+}
+.download-button {
+    display: inline-block;
+    background-color: #e8e8e8;
+    color: #000000;
+    text-decoration: none;
+    padding: 2px 5px;
+    border-radius: 5px;
+}
+
+.download-button:hover {
+    background-color: #2c2c2c;
+    cursor: pointer;
 }
