--- a/ProjectsPage/project.css
+++ b/ProjectsPage/project.css
@@ -61,6 +61,10 @@ h1 {
     justify-content: flex-end; /* Change from 'center' to 'flex-end' */
     align-items: center;
 }
+.recent-project-gif img{
+    max-width: 100%; 
+    max-height: 100%; 
+}
 
 footer {
     background: #1a1a1a;
