--- a/ProjectsPage/project.css
+++ b/ProjectsPage/project.css
@@ -55,7 +55,7 @@ h1 {
 }
 /* Update the styles for .recent-project-gif in your CSS file */
 .recent-project-gif {
-        background-image: url('./Images/Model.gif');
+    background-image: url('./Images/Model.gif');
     width: 200%; /* Adjust this value if necessary */
     display: flex;
     justify-content: flex-end; /* Change from 'center' to 'flex-end' */
@@ -64,6 +64,14 @@ h1 {
 .recent-project-gif img{
     max-width: 100%; 
     max-height: 100%; 
+}
+.nooked-img-container {
+    max-width: 500px; /* Set the max-width for the Nooked image */
+    max-height: 400px; /* Set the max-height for the Nooked image */
+}
+.nooked-img-container img {
+    width: 100%;
+    height: auto;
 }
 
 footer {
