--- a/ProjectsPage/project.css
+++ b/ProjectsPage/project.css
@@ -29,16 +29,15 @@ h1 {
     color:#b3b300
 }
 .nav-links {
-    position: absolute;
-    top: 50%;
-    right: 15px;
-    transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
 .nav-link {
     color: white;
     text-decoration: none;
     margin-left: 15px;
-    font-size: 12px;
+    font-size: 20px;
 }.project-section {
     display: flex;
     justify-content: space-between;
