--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,13 @@ h1 {
     font-family: "Source Sans Pro", sans-serif;
     font-weight: normal;
 }
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    background-color: #a6a6a6; /* light grey background */
 }
 
 header {
@@ -28,8 +30,8 @@ header::after {
     left: 0;
     right: 0;
     width: 100%;
-    height: 8px;
-    background: linear-gradient(90deg, #f06, #48f);
+    height: 5px; /* Adjust the height of the blue line */
+    background-color: #000000; /* Change to a solid blue color */
 }
 
 h1 {
@@ -103,11 +105,12 @@ footer {
 
 .about-image img {
     width: 100%;
-    max-width: 400px; /* Adjust this value as needed */
+    max-width: 400px;
     height: auto;
     border-radius: 5px;
-}
+    border: 2px solid black; /* Add a black border */
 
+}
 
 .read-more {
     display: inline-block;
@@ -120,4 +123,44 @@ footer {
 
 .read-more:hover {
     color: #036;
+}
+
+.project-title-bar {
+    background-color: #555;
+    padding: 1rem;
+    text-align: center;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    border: 2px solid black; /* Add a black border */
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+}
+
+.text-center {
+    text-align: center;
+}
+.Recent-Project{
+    padding-left: 10%;
+}
+
+.projects-link {
+    text-align: center;
+    padding: 1rem;
+}
+
+.projects-link a {
+    color: #fff;
+    background-color: #555;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.projects-link a:hover {
+    background-color: #333;
 }
