--- a/ProjectsPage/project.css
+++ b/ProjectsPage/project.css
@@ -1,56 +1,117 @@
+:root {
+    --main-font: "Arial", sans-serif;
+    --secondary-font: "Verdana", sans-serif;
+    --main-color: #2c3e50;
+    --accent-color: #000000;
+    --secondary-color: #34495e;
+    --secondary-color-light: #546787;
+}
+
 html {
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: #333333;
+    font-family: var(--main-font);
+    line-height: 1.6;
     margin: 0;
     padding: 0;
+    background-color: var(--background-color);
 }
+
 h1 {
     text-align: center;
+    color: var(--accent-color);
+    font-family: var(--main-font);
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+h2 {
+    font-family: var(--secondary-font);
+    font-size: 24px;
+    color: var(--accent-color);
+    margin-bottom: 10px;
+}
+
+h3 {
+    font-family: var(--secondary-font);
+    font-size: 20px;
+    color: var(--accent-color);
+    margin-bottom: 5px;
+}
+
+h4 {
+    font-family: var(--secondary-font);
+    font-size: 16px;
+    color: var(--accent-color);
+    margin-bottom: 5px;
 }
 .title-bar {
-    background-color: #1a1a1a;
-    color: white;
+    font-family: var(--main-font);
+    background-color: var(--main-color);
+    color: var(--accent-color);
     text-align: center;
     padding: 15px;
     font-size: 24px;
     position: relative;
     margin: 0;
 }
+.header {
+    background-color: var(--secondary-color);
+    padding: 30px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add shadow effect */
+}
 .main-title {
-    font-size: 30px; /* Updated font size */
-    color:#FFFFFF
+    font-size: 36px;
+    color: #ffffff; /* Change color to white */
+    margin-bottom: 15px;
+    transition: color 0.3s ease; /* Add transition effect */
 }
 .SH-title{
     font-size: 25px;
     color:#b3b300
 }
+
 .nav-links {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 0;
 }
 .nav-link {
-    color: white;
+    color: #ffffff; /* Change color to white */
     text-decoration: none;
     margin-left: 15px;
     font-size: 20px;
+    transition: color 0.3s ease; /* Add transition effect */
+
+}
+.nav-link:hover {
+    color: var(--accent-color); /* Change color on hover */
 }.project-section {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    background-color: grey;
+    background-color: var(--secondary-color-light);
     border-radius: 15px;
     margin: 20px;
 }
 .project-section:nth-child(even) {
-    background-color: blanchedalmond;
+    background-color: var(--secondary-color-light);
 }
 .project-description {
     width: 60%;
+    line-height: 1.5;
+    font-family: var(--main-font);
+    color: var(--accent-color);
+}
+.project-text {
+    margin-bottom: 30px;
+}
+p {
+    font-size: 16px;
 }
 /* Update the styles for .recent-project-gif in your CSS file */
 .recent-project-gif {
@@ -74,7 +135,7 @@ h1 {
 }
 
 footer {
-    background: #1a1a1a;
+    background: var(--main-color);
     color: #fff;
     text-align: center;
     padding: 1rem;
