--- a/ResumePage/resume-styles.css
+++ b/ResumePage/resume-styles.css
@@ -1,165 +1,101 @@
+:root {
+    --main-font: 'Montserrat', sans-serif;
+    --secondary-font: 'Roboto', sans-serif;
+    --background-color: #191919; /* Very Dark Grey */
+    --secondary-background-color: #2F2F2F; /* Slightly Lighter Grey */
+    --secondary-color: #808080; /* Medium Grey */
+    --main-color: #BFBFBF; /* Light Grey */
+    --accent-color: #61dafb; /* Bright Blue */
+}
+
+* {
+    box-sizing: border-box;
+}
+
 body {
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: var(--main-font);
     line-height: 1.6;
-    background-color: #f4f4f4;
-    padding: 20px;
-}
-
-header {
-    background-color: #3C6478;
-    padding: 15px;
-    text-align: center; /* Center the header text */
-
-}
-
-
-header h1 {
-    color: #ffffff;
     margin: 0;
-    font-size: 2.2rem;
-}
-
-main {
-    margin-top: 30px; /* Add top margin */
+    padding: 0;
+    background-color: var(--background-color);
+    color: var(--main-color);
 }
 
 nav {
-    background-color: #35434d;
-    text-align: center; /* Center the nav items */
-    padding: 10px 0; /* Add padding to the nav */
+    background: var(--secondary-color);
+    text-align: center;
+    padding: 1rem;
+    color: var(--background-color);
+    display: flex;
+    justify-content: space-between;
+}
+
+nav h1 {
+    flex: 1;
+    text-align: left;
+    font-weight: bold;
 }
 
 nav ul {
     list-style: none;
     padding: 0;
-    margin-bottom: 10px;
-}
-
-nav ul li {
-    display: inline;
-    padding: 5px;
-}
-
-nav ul li a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.nav-link {
-    color: white;
-    text-decoration: none;
-    margin-left: 15px;
-    font-size: 1.1rem;
-}
-
-.nav-link:hover {
-    background-color: #2c2c2c; /* Add hover effect to nav links */
-}
-
-section {
-    background-color: #ffffff;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
-    border: 3px solid #000000;
-}
-
-section:nth-child(even) {
-    background-color: #f0f0f0;
-}
-
-h2 {
-    margin-top: 0;
-    font-size: 1.8rem;
-    color: #3C6478;
-}
-
-h3 {
-    font-size: 1.3rem;
-    color: #2A3945;
-}
-
-ul {
-    margin-bottom: 20px; /* Add spacing below lists */
-}
-
-.skills-container {
     display: flex;
 }
 
-.skills-list {
-    list-style-type: disc;
-    padding: 0;
-    margin-right: 30px;
+nav ul li {
+    margin: 0 1rem;
 }
 
-.content-wrapper {
-    width: calc(100% - 500px);
-    float: left;
-}
-
-aside {
-    width: 500px;
-    position: fixed;
-    top: 0;
-    right: -20px;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); /* Add a box shadow */
-}
-
-aside img {
-    height: 100%;
-    object-fit: cover;
-    border: 2px solid black;
-    border-radius: 10px;
-    filter: brightness(0.9) contrast(1.1); /* Apply brightness and contrast adjustments */
-}
-
-.download-button {
-    display: inline-block;
-    background-color: #e8e8e8;
-    color: #000000;
+nav ul li a {
+    color: var(--background-color);
     text-decoration: none;
-    padding: 2px 5px;
-    border-radius: 5px;
-    font-size: 14px; /* Increase the download button font size */
-    font-weight: bold; /* Make the download button text bold */
 }
 
-.download-button:hover {
-    background-color: #2c2c2c;
-    cursor: pointer;
-    color: #ffffff; /* Change text color on hover */
+.resume-section {
+    margin: 2rem 0;
 }
 
-/* Add some spacing and styling for experience, licenses and certifications, and organizations sections */
-ul li ul {
-    margin-left: 20px;
-    list-style-type: circle;
+.resume-section h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-#scrollToTop {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: #35434d;
-    color: white;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 4px;
+footer {
+    background: var(--secondary-color);
+    text-align: center;
+    padding: 1rem;
+    color: var(--background-color);
+    bottom: 0;
+    width: 100%;
 }
 
-#scrollToTop:hover {
-    background-color: #555;
+footer p {
+    margin: 0;
+}
+
+a {
+    color: var(--main-color);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--accent-color);
+}
+
+.resume-section {
+    width: 80%;
+    margin: 2rem auto;
+    padding: 2rem;
+    background: var(--secondary-background-color);
+    color: var(--main-color);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
+}
+
+.resume-section h2 {
+    margin-bottom: 1rem;
+}
+
+.resume-section p {
+    line-height: 1.8;
 }
